# Editor

./: .gitignore  CLAUDE.md  README.md  editor.html  index.html  package-lock.json  package.json
.trae/specs/build-tauri-desktop-font-music/: checklist.md  spec.md  tasks.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web/: editor.html  editor_app.html
