[package]
name = "editor_tauri_shell"
version = "0.1.0"
description = "Editor Desktop Shell"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
base64 = "0.22"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.22"
